# mint

./: Cargo.toml
src/: lib.rs  robots.rs
src/robots/: parser.rs
tests/robotstxt/: eshop_prices_robots.txt
