[package]
name = "mint"
version = "0.1.0"
authors = ["Gustavo Aguiar <gugahoa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
robotparser = "0.10"
nom = "6.0"

[dev-dependencies]
tokio = { version = "0.3", features = ["full"]}
